--- a/src/app/administracion/administracion.component.css
+++ b/src/app/administracion/administracion.component.css
@@ -55,6 +55,17 @@
   justify-content: space-around;
   align-items: center;
   margin-top: 20px;
+  cursor: pointer;
+}
+
+.reportes:hover{
+  transform: translateY(-5px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.reportes:active {
+  transform: translateY(0);
+  box-shadow: none;
 }
 
 .correo, .check{
@@ -64,7 +75,7 @@
   align-items: center;
   color: #131313;
   text-align: center;
-  font-size: 22px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -94,4 +105,8 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.activo{
+  transform: scale(1.5);
 }
